--- a/camarapp/www/index.html
+++ b/camarapp/www/index.html
@@ -8,7 +8,7 @@
 
  
 
-<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+<script type="text/javascript" charset="utf-8" src="js\index.js"></script>
 
 <script type="text/javascript" charset="utf-8">
 document.addEventListener("deviceready",onDeviceReady,false);
